Changes for 2.2.20rc1

New features:

Bug fixes:
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)

--------------------------------------------------------------------------------
Changes for 2.2.19

2.2.19rc1 was released as 2.2.19 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.19rc1

Bug fixes:
........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki, Ron Waisberg for report (vso)
...G...... [ZBX-12231] fixed memory leak in agent if log[], logrt[] items use global regexps with multiple subexpressions (Andris)
...G...... [ZBX-12187] fixed memory leak when using UserParameter with suppressed characters passed in arguments (viktors)
A......... [ZBX-12023] fixed permission issue with event.get method (Sasha)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-11584] fixed selection of ntext data from Microsoft SQL Server using 'db.odbc.select' item key (Sergejs)
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
..F....... [ZBX-11888] fixed chart name urlencoding for web scenario reports; thanks to Kotaro Miyashita for patch (miks)

--------------------------------------------------------------------------------
Changes for 2.2.18

2.2.18rc1 was released as 2.2.18 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.18rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)