@@ -152,6 +152,8 @@ class CScreenItem extends CZBXAPI {
 		}
 		unset($screenItem);
 
+		$this->validateItemsURL($screenItems);
+
 		$screenIds = array_keys(array_flip(zbx_objectValues($screenItems, 'screenid')));
 
 		$dbScreens = API::Screen()->get(array(
@@ -241,6 +243,7 @@ class CScreenItem extends CZBXAPI {
 				self::exception(ZBX_API_ERROR_PARAMETERS, _('Invalid method parameters.'));
 			}
 		}
+		$this->validateItemsURL($screenItems);
 
 		$screenItems = zbx_toHash($screenItems, 'screenitemid');
 		$screenItemIds = array_keys($screenItems);
@@ -910,5 +913,21 @@ class CScreenItem extends CZBXAPI {
 		}
 
 		return $sqlParts;
+	}
+
+	/**
+	 * Validates URL fields for submitted screen items.
+	 *
+	 * @throws APIException for invalid URL
+	 *
+	 * @param array $screen_items	Array of screen items.
+	 */
+	protected function validateItemsURL($screen_items) {
+		foreach ($screen_items as $screen_item) {
+			if ($screen_item['resourcetype'] == SCREEN_RESOURCE_URL && array_key_exists('url', $screen_item)
+					&& !CHtmlUrlValidator::validate($screen_item['url'])) {
+				self::exception(ZBX_API_ERROR_PARAMETERS, _('Wrong value for url field.'));
+			}
+		}
 	}
 }
